<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemTextSize16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/text16" />
    <item
        android:id="@+id/itemTextSize20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/text20" />
    <item
        android:id="@+id/itemTextSize22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/text22" />
    <item
        android:id="@+id/itemTextSize24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/text24" />
</menu>