<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemColor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/color_gold"
        android:icon="@drawable/color_gold"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemColor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/color_orchid"
        android:icon="@drawable/color_orchid"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemColor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/color_red"
        android:icon="@drawable/color_red"
        app:showAsAction="ifRoom" />
</menu>